--- a/Momento/View/Base.lproj/Main.storyboard
+++ b/Momento/View/Base.lproj/Main.storyboard
@@ -461,71 +461,50 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="R9N-wE-ZqM">
-                                <rect key="frame" x="20" y="64" width="374" height="100"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MomentoLogo" translatesAutoresizingMaskIntoConstraints="NO" id="UzO-Qo-iJx">
-                                        <rect key="frame" x="0.0" y="0.0" width="186.66666666666666" height="100"/>
-                                    </imageView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="bR1-Bi-BWA">
-                                        <rect key="frame" x="187.66666666666663" y="0.0" width="186.33333333333337" height="100"/>
-                                        <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="spV-yO-VYW">
-                                                <rect key="frame" x="44.666666666666686" y="0.0" width="97" height="69"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="69" id="nO1-bX-6el"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
-                                                <state key="normal" title="Upload">
-                                                    <color key="titleColor" red="0.98039215690000003" green="0.63529411759999999" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
-                                                </state>
-                                                <connections>
-                                                    <action selector="importBtn:" destination="8cD-Z6-jIx" eventType="touchUpInside" id="Xu4-GR-Hrm"/>
-                                                </connections>
-                                            </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fSJ-Lv-2Ot">
-                                                <rect key="frame" x="69.000000000000028" y="70" width="48" height="30"/>
-                                                <state key="normal" title="Logout"/>
-                                                <connections>
-                                                    <action selector="logoutBtn:" destination="8cD-Z6-jIx" eventType="touchUpInside" id="vRo-KO-EuI"/>
-                                                </connections>
-                                            </button>
-                                        </subviews>
-                                    </stackView>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="dSW-Iv-KTm"/>
-                                </constraints>
-                            </stackView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="2Vq-No-u96">
-                                <rect key="frame" x="0.0" y="184" width="414" height="678"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="spV-yO-VYW">
+                                <rect key="frame" x="159" y="395" width="97" height="69"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
+                                <state key="normal" title="Upload">
+                                    <color key="titleColor" red="0.98039215690000003" green="0.63529411759999999" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="importBtn:" destination="8cD-Z6-jIx" eventType="touchUpInside" id="Xu4-GR-Hrm"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fSJ-Lv-2Ot">
+                                <rect key="frame" x="183" y="472" width="48" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Logout"/>
+                                <connections>
+                                    <action selector="logoutBtn:" destination="8cD-Z6-jIx" eventType="touchUpInside" id="vRo-KO-EuI"/>
+                                </connections>
+                            </button>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="2Vq-No-u96">
+                                <rect key="frame" x="0.0" y="475" width="414" height="387"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="MIh-4f-v5T">
-                                    <size key="itemSize" width="186" height="181"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Qnd-Zt-ckx">
+                                    <size key="itemSize" width="318" height="329"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="imgCell" id="SPn-CW-30u" customClass="ProfileCollectionViewCell" customModule="Momento" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                        <rect key="frame" x="48" y="0.0" width="318" height="329"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="318" height="329"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YlL-Vo-3aY">
-                                                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YlL-Vo-3aY">
+                                                    <rect key="frame" x="0.0" y="0.0" width="318" height="329"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                             </subviews>
                                         </view>
-                                        <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="YlL-Vo-3aY" secondAttribute="bottom" id="7a9-u2-Tba"/>
-                                            <constraint firstItem="YlL-Vo-3aY" firstAttribute="top" secondItem="SPn-CW-30u" secondAttribute="top" id="FSY-36-baL"/>
-                                            <constraint firstAttribute="trailing" secondItem="YlL-Vo-3aY" secondAttribute="trailing" id="V6I-BQ-6AC"/>
-                                            <constraint firstItem="YlL-Vo-3aY" firstAttribute="leading" secondItem="SPn-CW-30u" secondAttribute="leading" id="fY2-CX-ZLn"/>
-                                        </constraints>
-                                        <size key="customSize" width="150" height="150"/>
+                                        <size key="customSize" width="318" height="329"/>
                                         <connections>
                                             <outlet property="cellImage" destination="YlL-Vo-3aY" id="PHJ-yy-Ixs"/>
                                         </connections>
@@ -535,22 +514,33 @@
                                     <outlet property="dataSource" destination="8cD-Z6-jIx" id="OIw-zx-SYs"/>
                                 </connections>
                             </collectionView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image1" translatesAutoresizingMaskIntoConstraints="NO" id="1p4-1c-o5m">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="350"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="350" id="PYp-XB-4Vp"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MomentoLogo" translatesAutoresizingMaskIntoConstraints="NO" id="fIG-wR-QqB">
+                                <rect key="frame" x="10" y="54" width="120" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="Xma-Bl-Bai"/>
+                                    <constraint firstAttribute="height" constant="120" id="hDk-gn-zE6"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="R9N-wE-ZqM" firstAttribute="leading" secondItem="T3w-vy-Jw5" secondAttribute="leading" constant="20" id="1fG-oE-e3r"/>
-                            <constraint firstAttribute="trailing" secondItem="R9N-wE-ZqM" secondAttribute="trailing" constant="20" id="959-tu-7QF"/>
-                            <constraint firstItem="2Vq-No-u96" firstAttribute="trailing" secondItem="T3w-vy-Jw5" secondAttribute="trailing" id="Chb-I4-0vR"/>
-                            <constraint firstItem="R9N-wE-ZqM" firstAttribute="top" secondItem="T3w-vy-Jw5" secondAttribute="top" constant="20" id="b4P-Ij-aev"/>
-                            <constraint firstItem="T3w-vy-Jw5" firstAttribute="bottom" secondItem="2Vq-No-u96" secondAttribute="bottom" id="eVO-TM-4a5"/>
-                            <constraint firstItem="2Vq-No-u96" firstAttribute="leading" secondItem="T3w-vy-Jw5" secondAttribute="leading" id="iQz-27-d8x"/>
-                            <constraint firstItem="2Vq-No-u96" firstAttribute="top" secondItem="R9N-wE-ZqM" secondAttribute="bottom" constant="20" id="pr7-uT-OdA"/>
+                            <constraint firstItem="1p4-1c-o5m" firstAttribute="leading" secondItem="T3w-vy-Jw5" secondAttribute="leading" id="F96-Bt-9Dd"/>
+                            <constraint firstItem="fIG-wR-QqB" firstAttribute="leading" secondItem="T3w-vy-Jw5" secondAttribute="leading" constant="10" id="FIn-i6-EYS"/>
+                            <constraint firstItem="fIG-wR-QqB" firstAttribute="top" secondItem="T3w-vy-Jw5" secondAttribute="top" constant="10" id="P90-Z7-zg4"/>
+                            <constraint firstItem="1p4-1c-o5m" firstAttribute="top" secondItem="pGt-wW-a02" secondAttribute="top" id="V3s-ZN-R30"/>
+                            <constraint firstItem="1p4-1c-o5m" firstAttribute="trailing" secondItem="T3w-vy-Jw5" secondAttribute="trailing" id="eIX-WM-c2U"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="T3w-vy-Jw5"/>
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="2Vq-No-u96" id="M0g-zh-N9P"/>
-                        <outlet property="imageView" destination="UzO-Qo-iJx" id="H3A-XF-Zkb"/>
+                        <outlet property="headerPhoto" destination="1p4-1c-o5m" id="j3f-aK-W98"/>
                         <segue destination="hC3-Gt-Y54" kind="show" identifier="LogoutProfileSegue" id="rcm-Sf-ia9"/>
                     </connections>
                 </viewController>
@@ -743,11 +733,12 @@
     <resources>
         <image name="Home" width="25" height="25"/>
         <image name="MomentoLogo" width="500" height="500"/>
+        <image name="image1" width="864" height="648"/>
         <image name="momentoLettermark" width="2000" height="377"/>
         <image name="second" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="nZK-1W-mIA"/>
+        <segue reference="5X8-iX-xaf"/>
         <segue reference="rcm-Sf-ia9"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.98039215690000003" green="0.63529411759999999" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
