--- a/Momento/View/Base.lproj/Main.storyboard
+++ b/Momento/View/Base.lproj/Main.storyboard
@@ -760,13 +760,64 @@
                     <view key="view" contentMode="scaleToFill" id="NZo-FQ-Zvp">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="a5a-8W-7GZ">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="5IP-pV-xmq"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hAb-QF-lAe">
+                                <rect key="frame" x="20" y="310" width="76" height="41"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="30"/>
+                                <color key="textColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cX2-Hw-XwO">
+                                <rect key="frame" x="364" y="310" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="7Op-wJ-83i"/>
+                                    <constraint firstAttribute="width" constant="40" id="ofO-en-ef4"/>
+                                </constraints>
+                                <state key="normal" image="followButon"/>
+                                <connections>
+                                    <action selector="followButton:" destination="tuV-NG-HK8" eventType="touchUpInside" id="fF1-0A-yut"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CbA-Oo-seV">
+                                <rect key="frame" x="20" y="361" width="294" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="QRi-Fl-l4m"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
+                                <color key="textColor" red="0.98039215690000003" green="0.63529411759999999" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="hAb-QF-lAe" firstAttribute="top" secondItem="a5a-8W-7GZ" secondAttribute="bottom" constant="10" id="3RC-p8-T57"/>
+                            <constraint firstItem="CbA-Oo-seV" firstAttribute="top" secondItem="hAb-QF-lAe" secondAttribute="bottom" constant="10" id="ABq-7J-3qh"/>
+                            <constraint firstItem="a5a-8W-7GZ" firstAttribute="leading" secondItem="caX-xQ-5wb" secondAttribute="leading" id="CiE-kz-d9p"/>
+                            <constraint firstItem="caX-xQ-5wb" firstAttribute="trailing" secondItem="cX2-Hw-XwO" secondAttribute="trailing" constant="10" id="H1K-j2-JCi"/>
+                            <constraint firstItem="hAb-QF-lAe" firstAttribute="leading" secondItem="caX-xQ-5wb" secondAttribute="leading" constant="20" id="TFP-1u-mIX"/>
+                            <constraint firstItem="a5a-8W-7GZ" firstAttribute="top" secondItem="NZo-FQ-Zvp" secondAttribute="top" id="atw-Al-xsF"/>
+                            <constraint firstItem="a5a-8W-7GZ" firstAttribute="trailing" secondItem="caX-xQ-5wb" secondAttribute="trailing" id="ck5-U6-CqB"/>
+                            <constraint firstItem="CbA-Oo-seV" firstAttribute="leading" secondItem="caX-xQ-5wb" secondAttribute="leading" constant="20" id="keY-0b-GIi"/>
+                            <constraint firstItem="cX2-Hw-XwO" firstAttribute="top" secondItem="a5a-8W-7GZ" secondAttribute="bottom" constant="10" id="pJn-7f-5PB"/>
+                            <constraint firstItem="caX-xQ-5wb" firstAttribute="trailing" secondItem="CbA-Oo-seV" secondAttribute="trailing" constant="100" id="zWA-gw-CHl"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="caX-xQ-5wb"/>
                     </view>
+                    <connections>
+                        <outlet property="designTypesLabel" destination="CbA-Oo-seV" id="ndV-ua-sXS"/>
+                        <outlet property="headerPhoto" destination="a5a-8W-7GZ" id="SaT-RM-qpq"/>
+                        <outlet property="usernameLabel" destination="hAb-QF-lAe" id="BHL-8W-3hq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Roi-Kq-TFK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="706" y="2133"/>
+            <point key="canvasLocation" x="704.34782608695662" y="2132.8125"/>
         </scene>
         <!--Onboard2 View Controller-->
         <scene sceneID="3Zf-Xr-Kpb">
@@ -976,6 +1027,7 @@
         <image name="7R8A0139" width="4800" height="3200"/>
         <image name="7R8A9956-2" width="4800" height="2700"/>
         <image name="Home" width="25" height="25"/>
+        <image name="followButon" width="32.666667938232422" height="32.666667938232422"/>
         <image name="imageUpload" width="512" height="512"/>
         <image name="momentoLettermark" width="1000" height="188.5"/>
         <image name="searchSmall" width="200" height="200"/>
